--- a/Homepage.html
+++ b/Homepage.html
@@ -178,7 +178,7 @@
       <div class="info">
         <h2>Address</h2>
         <p>Tasty World</p>
-        <p>road no.33</p>
+        <!-- <p>road no.33</p> -->
         <p>L.B Nagar</p>
         <p>Hyderabad</p>
         <p>500072</p>
